[project]
name = "glucosedao"
version = "0.2.1"
description = "space for the GlucoseDao project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido==0.2.1",
    "gradio[mcp]<6.0",
    "psutil",
    "darts==0.29.0",
    "python-multipart",
    "plotly",
    "huggingface-hub",
    "pydantic",
    "cgm-format>=0.4.2",
    "glucosedao-glucobench>=0.2.0",
]

[project.scripts]
glucosedao = "glucosedao:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glucosedao"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "data/**/*.csv",
    ".pytest_cache/",
    ".venv/",
    "*.egg-info/",
]
